Closed
Bug 176842
Opened 23 years ago
Closed 23 years ago
gtk2 UI fonts are wonky
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: blizzard, Assigned: blizzard)
References
Details
Attachments
(1 file, 2 obsolete files)
|
10.29 KB,
patch
|
blizzard
:
review+
shaver
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
The gtk2 UI fonts seem to always be too big or too small. La la la.
| Assignee | ||
Comment 1•23 years ago
|
||
This patch adds the correct dpi checks for gtk2 and for xft for gtk2 builds as
well as gtk1.2 + xft builds. It also uses points instead of pixels when
loading fonts so that the dpi is used when xft fonts are loaded.
It also gets the correct font when using gtk2 by using GtkSettings instead of
out of the style of an X11 font.
Comment 3•23 years ago
|
||
Comment on attachment 104484 [details] [diff] [review]
patch
r=bryner
Attachment #104484 -
Flags: review+
Comment 4•23 years ago
|
||
With this patch my mozilla doesn't start at all. All I get is the following
error four times in a row:
(<unknown>:29510): GLib-GObject-WARNING **: gobject.c:916:g_object_get_valist():
object class `GtkSettings' has no property named `gtk-xft-dpi'
And then finally:
Floating point exception
Stack trace isn't useful because I've built mozilla with -fomit-frame-pointer:
#0 0x40c287d2 in nsFontMetricsXft::CacheFontMetrics() ()
#1 0x0826b210 in ?? ()
| Assignee | ||
Comment 5•23 years ago
|
||
I know what's causing that. Let me whip up a new patch.
| Assignee | ||
Comment 6•23 years ago
|
||
Include comment about why we check for the gtk dpi and only try to get the
value for it if it happens to exist.
Attachment #104484 -
Attachment is obsolete: true
| Assignee | ||
Comment 7•23 years ago
|
||
Comment on attachment 104767 [details] [diff] [review]
patch
carrying forward r=bryner
Attachment #104767 -
Flags: review+
Comment 8•23 years ago
|
||
Comment on attachment 104767 [details] [diff] [review]
patch
If the #ifdefs call for any reinforcements, it might be time to think about
pulling gtk2 out into its own file.
sr=shaver
Attachment #104767 -
Flags: superreview+
Comment 9•23 years ago
|
||
Comment on attachment 104767 [details] [diff] [review]
patch
a=asa for checkin to 1.2 (on behalf of drivers)
Attachment #104767 -
Flags: approval+
| Assignee | ||
Comment 10•23 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 11•23 years ago
|
||
With this patch (from CVS checkout based build) I get
###!!! ASSERTION: Computed Size < 0: 'aReflowState.mComputedWidth >=0 &&
aReflowState.mComputedHeight >= 0', file nsBoxFrame.cpp, line 803
Break: at file nsBoxFrame.cpp, line 803
/home/gl/mozilla/dist/bin/run-mozilla.sh: line 444: 1147 Floating point
exception"$prog" ${1+"$@"}
When I back the patch out the above does not occur.
.mozconfig
ac_add_options --enable-svg
ac_add_options --enable-crypto
ac_add_options --enable-default-toolkit=gtk2
ac_add_options --disable-toolkit-gtk
ac_add_options --disable-toolkit-qt
ac_add_options --enable-xft
ac_add_options --enable-freetype2
ac_add_options --enable-cpp-rtti
ac_add_options --enable-cpp-exceptions
ac_add_options --enable-extensions
ac_add_options --with-system-jpeg
ac_add_options --with-system-zlib
ac_add_options --with-system-png
ac_add_options --with-system-mng
#ac_add_options --enable-calendar
MOZ_INTERNAL_LIBART_LGPL=1
mk_add_options MOZ_INTERNAL_LIBART_LGPL=1
#MOZ_CALENDAR=1
#mk_add_options MOZ_CALENDAR=1
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 12•23 years ago
|
||
That bug is now open as 178045.
Status: REOPENED → RESOLVED
Closed: 23 years ago → 23 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•