Bug #176842.  gtk2 UI fonts are wonky.  Use the proper default font for gtk2.  Make sure to use the gtk2 dpi and xft dpi when they are available and fall back to the physical dpi if they aren't set for xft and gtk2 builds only.  r=bryner,sr=shaver,a=asa